@@ -116,7 +116,7 @@ say_wizard("\033[1m\033[36m" + "                             \| \|   \| \|" + "\
 say_wizard("\033[1m\033[36m" + "                             \| \|   \| \|" + "\033[0m")
 say_wizard("\033[1m\033[36m" + '' + "\033[0m")
 say_wizard("\033[1m\033[36m" + "Rails Composer, open source, supported by subscribers." + "\033[0m")
-say_wizard("\033[1m\033[36m" + "Like Rails Composer? Please join RailsApps to support development." + "\033[0m")
+say_wizard("\033[1m\033[36m" + "Please join RailsApps to support development of Rails Composer." + "\033[0m")
 say_wizard("\033[1m\033[36m" + "Need help? Ask on Stack Overflow with the tag \'railsapps.\'" + "\033[0m")
 say_wizard("Your new application will contain diagnostics in its README file.")
 
