@@ -2,6 +2,7 @@ h1. CHANGELOG
 
 h2. 2.6.2 unreleased
 
+* don't include 'domain_name' in 'secrets.yml' file unless email option is selected
 * remove temporary rails_apps_pages gem during cleanup phase
 
 h2. 2.6.1 May 4, 2014
